cmake_minimum_required(VERSION 3.12)
project(Algorithm)

set(CMAKE_CXX_STANDARD 11)

add_executable(Algorithm main.cpp)

add_executable(LeetCode LeetCode/LeetCodeTemp.cpp)

add_executable(Sword Sword/Swordtemp.cpp)

add_executable(XS XS/temp.cpp)

add_executable(HDOJ HDU/temp.cpp)

add_executable(luogu luogu/temp.cpp)